workshop04/weather-gw.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:
   name: weather-ingress

spec:
   selector:
      istio: ingressgateway
   servers:
   - hosts:
      - "weather.157.230.194.88.nip.io"
     port:
        number: 80
        protocol: HTTP
        name: HTTP



# # weatherapp-svc   ClusterIP   10.245.108.163   <none>        80/TCP           3m26s

# weather          NodePort    10.245.200.163   <none>        8080:32190/TCP   143m
# Gateway -> VirutalService -> Destination Rule

# http://weather.157.230.194.88.nip.io/v1
